--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="data:,">
 	<title>SITEMETRIC - Daily Deliveries Report</title>
-	<link href="CSS/main.css" rel="stylesheet">
-	<script src="JavaScript/main.js" defer type="module"></script>
+	<link href="./CSS/main.css" rel="stylesheet">
+	<script src="./JavaScript/main.js" defer type="module"></script>
 </head>
 <body>
 
