--- a/public/index.html
+++ b/public/index.html
@@ -147,8 +147,8 @@
 
 	<!-- Desktop Elements Template -->
 	<template id="desktop-elements">
-		<input 		desktop		id="courierpersonfirst"	class="row-input"	style="grid-area: courierperson;		transform: translate(0px, -17px);"		type="text"		placeholder="First Name"	size="10"	disabled	editable>
-		<input 		desktop		id="courierpersonlast"	class="row-input"	style="grid-area: courierperson;		transform: translate(0px, 17px);"		type="text"		placeholder="Last Name"		size="10"	disabled	editable>
+		<input 		desktop		id="courierpersonfirst"	class="row-input desktop"	style="grid-area: courierperson;		transform: translate(0px, -17px);"		type="text"		placeholder="First Name"	size="10"	disabled	editable>
+		<input 		desktop		id="courierpersonlast"	class="row-input desktop"	style="grid-area: courierperson;		transform: translate(0px, 17px);"		type="text"		placeholder="Last Name"		size="10"	disabled	editable>
 	</template>
 
 
@@ -161,7 +161,7 @@
 		<div 	mobile		id="mobile-gate"		class="mobile-header-1"	style="align-self: flex-start;	grid-area: headers; justify-self: flex-end;">Gate A</div>
 		<div	mobile		id="mobile-time"		class="mobile-time">
 			<div	id="mobile-arrivaltime"			class="mobile-header-1	mobile-arrivaltime">7:26 AM</div>
-			<svg 									style="height: 8px;		left:57px;	position: absolute;" viewBox="0 0 12.371 6.61">		<path d="M112.081-686.39l-1.05-1.035,1.544-1.544H103v-1.452h9.591l-1.56-1.544L112.066-693l3.305,3.305Z" transform="translate(-103 693)" fill="#A2A2A2"/>		</svg>
+			<svg 	id="arrow-svg"					style="height: 8px;		left:57px;	position: absolute;" viewBox="0 0 12.371 6.61">		<path d="M112.081-686.39l-1.05-1.035,1.544-1.544H103v-1.452h9.591l-1.56-1.544L112.066-693l3.305,3.305Z" transform="translate(-103 693)" fill="#A2A2A2"/>		</svg>
 			<div	id="mobile-departuretime"		class="mobile-header-1	mobile-departuretime"	>12:03 PM</div>
 		</div>
 		<svg 	mobile	 	id="drop-down-arrow" style=" align-self: center;		 grid-area: status;	height: 10px;	justify-self: flex-end;		margin-right: 2px;	pointer-events: none;	transition: transform 500ms;"	 viewBox="0 0 5.656 9.314">		<path id="Path_46" data-name="Path 46" d="M12208.932,9421.156a1,1,0,0,1-.707-.293l-3.658-3.656a1,1,0,0,1,1.414-1.414l2.951,2.949,2.949-2.949a1,1,0,0,1,1.414,1.414l-3.656,3.656A1,1,0,0,1,12208.932,9421.156Z" transform="translate(9421.156 -12204.273) rotate(90)" fill="#646464"/>		</svg>
