--- a/public/index.html
+++ b/public/index.html
@@ -75,8 +75,12 @@
 				<svg width="12px" height="12px" viewBox="0 0 13.001 13.001" style="margin-right: 8px;">			<path d="M-8861.5-9054a1,1,0,0,1,1,1v4.5h4.5a1,1,0,0,1,1,1,1,1,0,0,1-1,1h-4.5v4.5a1,1,0,0,1-1,1,1,1,0,0,1-1-1v-4.5h-4.5a1,1,0,0,1-1-1,1,1,0,0,1,1-1h4.5v-4.5A1,1,0,0,1-8861.5-9054Z" transform="translate(8868.001 9054.001)" fill="white"></path>		</svg>
 				Create New Entry
 			</div>
-		</div>
 
+			<!-- Experimental - Download as PDF Button -->
+			<div id="save-as-pdf"	style="grid-area: button;">Save as PDF</div>
+
+
+		</div>
 	</div>
 
 
