implemented pushing PDF and screenshot to slack

--- a/public/index.html
+++ b/public/index.html
@@ -76,10 +76,15 @@
 				Create New Entry
 			</div>
 
-			<!-- Experimental - Download as PDF Button -->
-			<div id="save-as-pdf"	style="grid-area: button;">Save as PDF</div>
 
+		<!-- Experimental Area -->
+				
+			<!-- Download as PDF Button -->
+			<div id="save-as-pdf"				style="grid-area: button;">Save as PDF</div>
 
+			<div id="send-pdf-to-slack"			style="grid-area: button;">Send PDF To Slack</div>
+
+			<div id="send-screenshot-to-slack"	style="grid-area: button;">Send Screenshot to Slack</div>
 		</div>
 	</div>
 
